--- a/app/src/main/res/layout/fragment_bulletinboard.xml
+++ b/app/src/main/res/layout/fragment_bulletinboard.xml
@@ -9,11 +9,15 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include
+        <!--<include
             layout="@layout/app_bar_main"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" /> -->
 
+        <include
+            layout="@layout/app_bar_back"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/AddPostButton"
@@ -22,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
+            android:layout_gravity="bottom|end"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
@@ -33,7 +37,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -41,7 +46,7 @@
                 android:gravity="top"
                 android:orientation="vertical">
 
-                <Button
+              <!--  <Button
                     android:id="@+id/requestConsultationButton"
                     style="@style/pinkButtonStyle"
                     android:layout_width="match_parent"
@@ -50,7 +55,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:onClick="show_btn"
-                    android:text="@string/request_consultation" />
+                    android:text="@string/request_consultation" />-->
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
