--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data><variable
+        name="test"
+        type="com.example.faithandroid.OverviewViewModel">
+    </variable></data>
 <androidx.drawerlayout.widget.DrawerLayout
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
@@ -11,7 +16,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
 
         <fragment
             android:layout_width="match_parent"
