--- a/app/src/main/res/layout/fragment_bilboard_goal.xml
+++ b/app/src/main/res/layout/fragment_bilboard_goal.xml
@@ -14,32 +14,34 @@
             android:layout_height="wrap_content">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="414dp"
-                android:layout_height="match_parent">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="301dp"
-                    android:layout_height="48dp"
+                    android:id="@+id/description"
+                    android:layout_width="295dp"
+                    android:layout_height="49dp"
+                    android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:text="@string/textview"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageView2" />
+                    app:layout_constraintStart_toEndOf="@+id/profilepic" />
 
                 <Button
                     android:id="@+id/button"
                     android:layout_width="72dp"
                     android:layout_height="37dp"
-                    android:layout_marginRight="15dp"
+                    android:layout_margin="10dp"
                     android:text="X"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/profilepic"
                     android:layout_width="108dp"
                     android:layout_height="88dp"
+                    android:layout_margin="10dp"
                     android:layout_weight="1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -47,13 +49,14 @@
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/titleGoal"
                     android:layout_width="218dp"
                     android:layout_height="37dp"
+                    android:layout_margin="10dp"
                     android:text="TextView"
-                    app:layout_constraintBottom_toTopOf="@+id/textView2"
+                    app:layout_constraintBottom_toTopOf="@+id/description"
                     app:layout_constraintEnd_toStartOf="@+id/button"
-                    app:layout_constraintStart_toEndOf="@+id/imageView2"
+                    app:layout_constraintStart_toEndOf="@+id/profilepic"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
