--- a/app/src/main/res/layout/bulletinboard.xml
+++ b/app/src/main/res/layout/bulletinboard.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.faithandroid.bulletinboard.BulletinBoardViewModel" />
+            type="com.example.faithandroid.PostViewModel" />
     </data>
 
     <FrameLayout
@@ -67,7 +67,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/requestConsultationButton"
-                app:listData="@{viewModel.mockData}">
+                app:listData="@{viewModel.postList}">
 
             </androidx.recyclerview.widget.RecyclerView>
 
