--- a/app/src/main/res/layout/app_homescherm.xml
+++ b/app/src/main/res/layout/app_homescherm.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <FrameLayout
@@ -37,17 +37,39 @@
                     android:layout_height="wrap_content">
 
                     <ImageView
+                        android:id="@+id/img_bulletinboard"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/bulletinboard_large"
+                        app:layout_constraintBottom_toTopOf="@id/lbl_bulletinboard"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0" />
+
+                    <TextView
+                            android:id="@+id/lbl_bulletinboard"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="@string/bulletinboard"
+                            android:textColor="@color/colorPrimary"
+                            android:textStyle="bold"
+                            android:padding="5dp"
+                            app:layout_constraintEnd_toEndOf="@+id/img_bulletinboard"
+                            app:layout_constraintStart_toStartOf="@+id/img_bulletinboard"
+                            app:layout_constraintTop_toBottomOf="@+id/img_bulletinboard"
+                            app:layout_constraintBottom_toTopOf="@id/lbl_bulletinboard"/>
+
+                    <ImageView
                         android:id="@+id/img_wolkenkrabber"
                         android:layout_width="200dp"
                         android:layout_height="200dp"
                         android:contentDescription="@string/skyscraper"
                         android:scaleType="centerCrop"
                         android:src="@drawable/skyscraper"
-                        app:layout_constraintBottom_toTopOf="@id/lbl_wolkenkrabber"
-                        app:layout_constraintEnd_toStartOf="@id/img_cinema"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.0" />
+                        app:layout_constraintTop_toBottomOf="@id/lbl_bulletinboard" />
 
                     <TextView
                         android:id="@+id/lbl_wolkenkrabber"
@@ -63,31 +85,30 @@
                         app:layout_constraintTop_toBottomOf="@+id/img_wolkenkrabber" />
 
                     <ImageView
-                        android:id="@+id/img_cinema"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:contentDescription="@string/cinema"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/cinema"
-                        app:layout_constraintBottom_toTopOf="@id/lbl_cinema"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/img_wolkenkrabber"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="1.0" />
+                         android:id="@+id/img_billboard"
+                         android:layout_width="200dp"
+                         android:layout_height="200dp"
+                         android:contentDescription="@string/billboard"
+                         android:scaleType="centerCrop"
+                         android:src="@drawable/billboard"
+                         app:layout_constraintBottom_toTopOf="@id/lbl_billboard"
+                         app:layout_constraintEnd_toEndOf="parent"
+                         app:layout_constraintStart_toEndOf="@id/img_wolkenkrabber"
+                         app:layout_constraintTop_toBottomOf="@id/lbl_bulletinboard" />
 
-                    <TextView
-                        android:id="@+id/lbl_cinema"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/cinema"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:padding="5dp"
-                        app:layout_constraintBottom_toTopOf="@+id/img_musicRoom"
-                        app:layout_constraintEnd_toEndOf="@+id/img_cinema"
-                        app:layout_constraintStart_toStartOf="@+id/img_cinema"
-                        app:layout_constraintTop_toBottomOf="@+id/img_cinema" />
-
+                     <TextView
+                         android:id="@+id/lbl_billboard"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="@string/billboard"
+                         android:textColor="@color/colorPrimary"
+                         android:textStyle="bold"
+                         android:padding="5dp"
+                         app:layout_constraintBottom_toTopOf="@+id/img_billboard"
+                         app:layout_constraintEnd_toEndOf="@+id/img_billboard"
+                         app:layout_constraintStart_toStartOf="@+id/img_billboard"
+                         app:layout_constraintTop_toBottomOf="@+id/img_billboard" />
+-->
                     <ImageView
                         android:id="@+id/img_schatkist"
                         android:layout_width="200dp"
@@ -109,7 +130,6 @@
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         android:padding="5dp"
-                        app:layout_constraintBottom_toTopOf="@+id/img_rugzak"
                         app:layout_constraintEnd_toEndOf="@+id/img_schatkist"
                         app:layout_constraintStart_toStartOf="@+id/img_schatkist"
                         app:layout_constraintTop_toBottomOf="@+id/img_schatkist" />
@@ -124,7 +144,7 @@
                         app:layout_constraintBottom_toTopOf="@id/lbl_musicRoom"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/img_schatkist"
-                        app:layout_constraintTop_toBottomOf="@id/lbl_cinema" />
+                        app:layout_constraintTop_toBottomOf="@id/lbl_billboard" />
 
                     <TextView
                         android:id="@+id/lbl_musicRoom"
@@ -134,62 +154,61 @@
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         android:padding="5dp"
-                        app:layout_constraintBottom_toTopOf="@+id/img_billboard"
+                        app:layout_constraintBottom_toTopOf="@+id/img_musicRoom"
                         app:layout_constraintEnd_toEndOf="@+id/img_musicRoom"
                         app:layout_constraintStart_toStartOf="@+id/img_musicRoom"
                         app:layout_constraintTop_toBottomOf="@+id/img_musicRoom" />
 
                     <ImageView
-                        android:id="@+id/img_rugzak"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:contentDescription="@string/backpack"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/backpack"
-                        app:layout_constraintBottom_toTopOf="@id/lbl_rugzak"
-                        app:layout_constraintEnd_toStartOf="@id/img_billboard"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/lbl_schatkist" />
+                                           android:id="@+id/img_rugzak"
+                                           android:layout_width="200dp"
+                                           android:layout_height="200dp"
+                                           android:contentDescription="@string/backpack"
+                                           android:scaleType="centerCrop"
+                                           android:src="@drawable/backpack"
+                                           app:layout_constraintBottom_toTopOf="@id/lbl_rugzak"
+                                           app:layout_constraintEnd_toStartOf="@id/img_billboard"
+                                           app:layout_constraintStart_toStartOf="parent"
+                                           app:layout_constraintTop_toBottomOf="@id/lbl_schatkist" />
 
                     <TextView
-                        android:id="@+id/lbl_rugzak"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/backpack"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:padding="5dp"
-                        app:layout_constraintBottom_toTopOf="@+id/img_prikbord"
-                        app:layout_constraintEnd_toEndOf="@+id/img_rugzak"
-                        app:layout_constraintStart_toStartOf="@+id/img_rugzak"
-                        app:layout_constraintTop_toBottomOf="@+id/img_rugzak" />
+                                           android:id="@+id/lbl_rugzak"
+                                           android:layout_width="wrap_content"
+                                           android:layout_height="wrap_content"
+                                           android:text="@string/backpack"
+                                           android:textColor="@color/colorPrimary"
+                                           android:textStyle="bold"
+                                           android:padding="5dp"
+                                           app:layout_constraintEnd_toEndOf="@+id/img_rugzak"
+                                           app:layout_constraintStart_toStartOf="@+id/img_rugzak"
+                                           app:layout_constraintTop_toBottomOf="@+id/img_rugzak" />
 
-                    <ImageView
-                        android:id="@+id/img_billboard"
+                     <ImageView
+                        android:id="@+id/img_winkelcentrum"
                         android:layout_width="200dp"
                         android:layout_height="200dp"
-                        android:contentDescription="@string/billboard"
+                        android:contentDescription="@string/winkelCentrum"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/billboard"
-                        app:layout_constraintBottom_toTopOf="@id/lbl_billboard"
+                        android:src="@drawable/personicon"
+                        app:layout_constraintBottom_toTopOf="@id/lbl_winkelcentrum"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/img_rugzak"
                         app:layout_constraintTop_toBottomOf="@id/lbl_musicRoom" />
 
                     <TextView
-                        android:id="@+id/lbl_billboard"
+                        android:id="@+id/lbl_winkelcentrum"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/billboard"
+                        android:text="@string/winkelCentrum"
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         android:padding="5dp"
-                        app:layout_constraintBottom_toTopOf="@+id/img_winkelcentrum"
-                        app:layout_constraintEnd_toEndOf="@+id/img_billboard"
-                        app:layout_constraintStart_toStartOf="@+id/img_billboard"
-                        app:layout_constraintTop_toBottomOf="@+id/img_billboard" />
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/img_winkelcentrum"
+                        app:layout_constraintTop_toBottomOf="@+id/img_winkelcentrum" />
 
-                    <ImageView
+                   <!-- <ImageView
                         android:id="@+id/img_prikbord"
                         android:layout_width="200dp"
                         android:layout_height="200dp"
@@ -212,32 +231,9 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/img_prikbord"
                         app:layout_constraintStart_toStartOf="@+id/img_prikbord"
-                        app:layout_constraintTop_toBottomOf="@+id/img_prikbord" />
+                        app:layout_constraintTop_toBottomOf="@+id/img_prikbord" /> -->
 
-                    <ImageView
-                        android:id="@+id/img_winkelcentrum"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:contentDescription="@string/winkelCentrum"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/personicon"
-                        app:layout_constraintBottom_toTopOf="@id/lbl_winkelcentrum"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/img_prikbord"
-                        app:layout_constraintTop_toBottomOf="@id/lbl_billboard" />
 
-                    <TextView
-                        android:id="@+id/lbl_winkelcentrum"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/winkelCentrum"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:padding="5dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="@+id/img_winkelcentrum"
-                        app:layout_constraintTop_toBottomOf="@+id/img_winkelcentrum" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </ScrollView>
 
